Fix linting errors

--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -3,7 +3,7 @@
     <div class="grid">
       <div class="col--6-12">
         {{#link-to "index" (query-params bestuurseenheidId=bestuurseenheid.id) class="link--icon"}}
-          <small><i  class="vi-arrow vi-u-180deg vi"></i>Terug naar zoeken</small>
+          <small><i class="vi-arrow vi-u-180deg vi"></i>Terug naar zoeken</small>
         {{/link-to}}
       </div>
     </div>
@@ -13,8 +13,8 @@
     <h1 class="h2 text-light u-spacer--bottom--tiny">
       Leidinggevenden van
       {{#with-rdfa-context model=bestuurseenheid tagName="span" as |bestuurseenheid|}}
-        {{#bestuurseenheid.get prop="naam" as |attrs value|}}
-          <span {{rdfa attrs}}>{{value}}</span>
+        {{#bestuurseenheid.get prop="naam" as |attributes value|}}
+          <span {{rdfa attributes}}>{{value}}</span>
         {{/bestuurseenheid.get}}
       {{/with-rdfa-context}}
     </h1>
