--- a/app/templates/legaal/disclaimer.hbs
+++ b/app/templates/legaal/disclaimer.hbs
@@ -60,8 +60,11 @@
           </tr>
           <tr>
             <td>Leidinggevendendatabank</td>
-            <td><a href="https://codex.vlaanderen.be/PrintDocument.ashx?id=1022713" target="_blank" rel="noopener">Besluit van de Vlaamse Regering  van 18 januari 2013 tot nadere uitvoering van de leidinggevendendatabank, vermeld in artikel 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn.</a></td>
-            <td>De databank bevat de voornaam, de achternaam, het geslacht, de geboortedatum, het rijksregisternummer, en de begin- en einddatum van zijn leidinggevend. De gegevens worden bijgehouden van volgende leidinggevenden: {{!-- We need the list here --}}</td>
+            <td>
+              <a href="https://codex.vlaanderen.be/Zoeken/Document.aspx?DID=1030136&param=inhoud" target="_blank">Ministerieel besluit van 3 december 2018 houdende bepaling en beheer van de open standaarden en de technische voorwaarden voor de akten en documenten, voor de mandatendatabank en voor de databank van de leidend ambtenaren van de lokale en de provinciale besturen.
+              </a>
+            </td>
+            <td>De databank bevat de voornaam, de achternaam, het rijksregisternummer, de contactgegevens en de begin- en (indien van toepassing) einddatum van de aanstelling. De gegevens worden bijgehouden van volgende leidinggevende functies: algemeen directeur, adgjunct-algemeen directeur, financieel directeur, adjunct-financieel directeur, griffier, leidinggevend ambtenaar.</td>
           </tr>
         </tbody>
       </table>
@@ -77,7 +80,7 @@
 
       <h3 class="h3">Wat zijn de grondslagen voor de verwerking van uw persoonsgegevens?</h3>
       <p>We verwerken uw persoonsgegevens voor onze taken van algemeen belang die zijn opgenomen in het <a href="https://codex.vlaanderen.be/Zoeken/Document.aspx?DID=1014349&amp;param=inhoud" target="_blank" rel="noopener">Besluit van de Vlaamse Regering van 28 oktober 2005 tot oprichting van het intern verzelfstandigd agentschap</a>.</p>
-      <p>Specifiek voor de gegevens van leidinggevenden verwerken we de gegevens zoals opgenomen in Besluit van de Vlaamse Regering {{!-- van 18 januari 2013 --}} tot nadere uitvoering van de leidinggevendendatabank, vermeld in artikel {{!-- 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn. --}}</p>
+      <p>Specifiek voor de gegevens van leidinggevenden verwerken we de gegevens zoals opgenomen in Besluit van de Vlaamse Regering van 18 januari 2013 tot nadere uitvoering van de leidinggevendendatabank, vermeld in artikel 74bis en 274, § 5, van het Gemeentedecreet, artikel 72bis van het Provinciedecreet van 9 december 2005 en artikel 73/1 van het decreet van 19 december 2008 betreffende de organisatie van de openbare centra voor maatschappelijk welzijn.</p>
       <p>We baseren de verwerking van uw persoonsgegevens in het kader van het  behandelen van contactformulieren op uw toestemming.</p>
 
       <h3 class="h3">Hoelang bewaren we uw persoonsgegevens?</h3>
