--- a/app/templates/legaal/disclaimer.hbs
+++ b/app/templates/legaal/disclaimer.hbs
@@ -59,7 +59,7 @@
             <td><p class="uppercase text-fade">Identificatie contactgegevens</p></td>
           </tr>
           <tr>
-            <td>Leidinggevendendatabank</td>
+            <td>Databank Leidinggevenden</td>
             <td>
               <a href="https://codex.vlaanderen.be/Zoeken/Document.aspx?DID=1030136&param=inhoud" target="_blank">Ministerieel besluit van 3 december 2018 houdende bepaling en beheer van de open standaarden en de technische voorwaarden voor de akten en documenten, voor de mandatendatabank en voor de databank van de leidend ambtenaren van de lokale en de provinciale besturen.
               </a>
