--- a/app/templates/legaal/disclaimer.hbs
+++ b/app/templates/legaal/disclaimer.hbs
@@ -61,7 +61,8 @@
           <tr>
             <td>Databank Leidinggevenden</td>
             <td>
-              <a href="https://codex.vlaanderen.be/Zoeken/Document.aspx?DID=1030136&param=inhoud" target="_blank">Ministerieel besluit van 3 december 2018 houdende bepaling en beheer van de open standaarden en de technische voorwaarden voor de akten en documenten, voor de mandatendatabank en voor de databank van de leidend ambtenaren van de lokale en de provinciale besturen.
+              <a href="https://codex.vlaanderen.be/Zoeken/Document.aspx?DID=1030136&param=inhoud" target="_blank" rel="noopener noreferrer">
+                Ministerieel besluit van 3 december 2018 houdende bepaling en beheer van de open standaarden en de technische voorwaarden voor de akten en documenten, voor de mandatendatabank en voor de databank van de leidend ambtenaren van de lokale en de provinciale besturen.
               </a>
             </td>
             <td>De databank bevat de voornaam, de achternaam, het rijksregisternummer, de contactgegevens en de begin- en (indien van toepassing) einddatum van de aanstelling. De gegevens worden bijgehouden van volgende leidinggevende functies: algemeen directeur, adgjunct-algemeen directeur, financieel directeur, adjunct-financieel directeur, griffier, leidinggevend ambtenaar.</td>
