show available exports

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -32,32 +32,6 @@
         {{!-- bestuursperiode select here --}}
       </div>
     </div>
-    <div class="grid">
-      <div class="col--4-12 col--12-12--s">
-        <div class="u-spacer--bottom document-miniature">
-          <div class="document-miniature__type">
-            <span class="document-miniature__type__text">CSV</span>
-          </div>
-          <div class="document-miniature__content">
-            <a class="document-miniature__title">CSV: voor spreadsheet editors zoals Excel of Numbers.</a>
-            <div class="document-miniature__metadata">CSV - 57.1MB - 30/04/2019 08:43</div>
-          </div>
-        </div>
-      </div>
-      <div class="col--4-12 col--12-12--s">
-        <div class="u-spacer--bottom document-miniature">
-          <div class="document-miniature__type">
-            <span class="document-miniature__type__text">Turtle</span>
-          </div>
-          <div class="document-miniature__content">
-            <a class="document-miniature__title">Turtle: gestructureerde data voor dataverwerking en analyse.</a>
-            <div class="document-miniature__metadata">Turtle - 35.1MB - 30/04/2019 10:19</div>
-          </div>
-        </div>
-      </div>
-      <p>Mail naar <a href="mailto:LoketLokaalBestuur@vlaanderen.be">LoketLokaalBestuur@vlaanderen.be</a> voor meer informatie.</p>
-    </div>
-
-    {{outlet}}
+    {{download-miniatures}}
   </div>
 </div>
