--- a/app/templates/components/download-miniatures.hbs
+++ b/app/templates/components/download-miniatures.hbs
@@ -8,7 +8,7 @@
   <div class="col--4-12 col--12-12--s">
     {{wu-document-miniature class="u-spacer--bottom" type="CSV"
       label="CSV: voor spreadsheet editors zoals Excel of Numbers."
-      metadata="niet beschikbaar."}}
+      metadata="Niet beschikbaar"}}
   </div>
 {{/if}}
 {{#if ttlFile}}
@@ -21,7 +21,7 @@
   <div class="col--4-12 col--12-12--s">
     {{wu-document-miniature class="u-spacer--bottom" type="Turtle"
       label="Turtle: gestructureerde data voor dataverwerking en analyse."
-      metadata="niet beschikbaar."}}
+      metadata="Niet beschikbaar"}}
   </div>
 {{/if}}
 <p>Mail naar <a href="mailto:LoketLokaalBestuur@vlaanderen.be">LoketLokaalBestuur@vlaanderen.be</a> voor meer informatie.</p>
