--- a/app/templates/components/select-bestuurseenheid.hbs
+++ b/app/templates/components/select-bestuurseenheid.hbs
@@ -1,10 +1,11 @@
 {{#power-select
+  searchEnabled=true
   placeholder="Berchem, Hasselt, Gent, ..."
   search=(perform search)
   searchPlaceholder="Typ om te zoeken..."
   options=options
   selected=selected
-  onchange=(action "changeSelected")
+  onChange=(action "changeSelected")
   allowClear=true
   as |bestuurseenheid|}}
   {{bestuurseenheid.naam}} ({{bestuurseenheid.classificatie.label}})
