converted the rest of the route templates to octane

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,9 +6,9 @@
 
   {{#unless isFastBoot}} {{wu-widget src=header class="vo-header-widget"}} {{/unless}}
 
-  {{#with-rdfa-prefixes-and-vocab}}
+  <WithRdfaPrefixesAndVocab>
     {{outlet}}
-  {{/with-rdfa-prefixes-and-vocab}}
+  </WithRdfaPrefixesAndVocab>
 
   {{#unless isFastBoot}} {{wu-widget src=footer}} {{/unless}}
 </div>
