converted download miniatures to octane

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -28,6 +28,6 @@
         {{!-- bestuursperiode select here --}}
       </div>
     </div>
-    {{download-miniatures}}
+    <DownloadMiniatures />
   </div>
 </div>
