--- a/app/templates/components/functionaris-table.hbs
+++ b/app/templates/components/functionaris-table.hbs
@@ -1,23 +1,22 @@
-{{#data-table
-  content=content
-  isLoading=isLoadingModel
-  noDataMessage=""
-  sort=sort
-  page=page
-  size=size
-  class="container-flex--contain data-table data-table--tight data-table--nowrap"
+<DataTable
+  @content={{content}}
+  @isLoading={{isLoadingModel}}
+  @noDataMessage=""
+  @sort={{sort}}
+  @page={{page}}
+  @size={{size}}
+  @class="container-flex--contain data-table data-table--tight data-table--nowrap"
+  as |t|>
+  <t.content as |c|>
 
-  as |t|}}
-  {{#t.content as |c|}}
-
-    {{#c.header}}
-      {{th-sortable label="Functie" field="bekleedt.rol.label" currentSorting=sort}}
-      {{th-sortable label="Voornaam" field="is-bestuurlijke-alias-van.gebruikte-voornaam" currentSorting=sort}}
-      {{th-sortable label="Familienaam" field="is-bestuurlijke-alias-van.achternaam" currentSorting=sort}}
-      {{th-sortable label="Status" field="status.label" currentSorting=sort}}
+    <c.header>
+      <ThSortable @label="Functie" @field="bekleedt.rol.label" @currentSorting={{sort}} />
+      <ThSortable @label="Voornaam" @field="is-bestuurlijke-alias-van.gebruikte-voornaam" @currentSorting={{sort}} />
+      <ThSortable @label="Familienaam" @field="is-bestuurlijke-alias-van.achternaam" @currentSorting={{sort}} />
+      <ThSortable @label="Status" @field="status.label" @currentSorting={{sort}} />
       <th>Contactgegevens</th>
-      {{th-sortable label="Adres" field="bekleedt.contactinfo.adres" currentSorting=sort}}
-    {{/c.header}}
+      <ThSortable @label="Adres" @field="bekleedt.contactinfo.adres" @currentSorting={{sort}} />
+    </c.header>
 
     {{#if (eq content.length 0)}}
       <tbody>
@@ -28,134 +27,128 @@
         </tr>
       </tbody>
     {{else}}
-      {{#c.body as |row|}}
+      <c.body as |row|>
         <td>
-          {{#with-rdfa-context tagName="div" model=row as |functionaris|}}
-            {{#functionaris.get prop="bekleedt" as |attributes value bestuursfunctie|}}
+          <WithRdfaContext @tagName="div" @model={{row}} as |functionaris|>
+            <functionaris.get @prop="bekleedt" as |attributes value bestuursfunctie|>
               <div {{rdfa attributes}}>
-                {{#bestuursfunctie.each prop="bevatIn" as |attributes value bestuursorgaanInTijd|}}
+                <bestuursfunctie.each @prop="bevatIn" as |attributes value bestuursorgaanInTijd|>
                   <div {{rdfa attributes}}>
-                    {{#bestuursorgaanInTijd.get prop="isTijdsspecialisatieVan" as |attributes value bestuursorgaan|}}
+                    <bestuursorgaanInTijd.get @prop="isTijdsspecialisatieVan" as |attributes value bestuursorgaan|>
                       <div {{rdfa attributes}}>
-                        {{#bestuursorgaan.get prop="bestuurseenheid" as |attributes value bestuurseenheid|}}
+                        <bestuursorgaan.get @prop="bestuurseenheid" as |attributes value bestuurseenheid|>
                           <div {{rdfa attributes}}>
-                            {{#bestuurseenheid.get prop="naam" as |attributes value|}}
+                            <bestuurseenheid.get @prop="naam" as |attributes value|>
                               <div {{rdfa attributes}} class="u-hidden">{{value}}</div>
-                            {{/bestuurseenheid.get}}
+                            </bestuurseenheid.get>
                           </div>
-                        {{/bestuursorgaan.get}}
+                        </bestuursorgaan.get>
                       </div>
-                    {{/bestuursorgaanInTijd.get}}
+                    </bestuursorgaanInTijd.get>
                   </div>
-                {{/bestuursfunctie.each}}
+                </bestuursfunctie.each>
               </div>
-            {{/functionaris.get}}
-          {{/with-rdfa-context}}
+            </functionaris.get>
+          </WithRdfaContext>
 
-          {{#with-rdfa-context tagName="div" model=row as |functionaris|}}
-            {{#functionaris.get prop="bekleedt" as |attributes value bekleedt|}}
+          <WithRdfaContext @tagName="div" @model={{row}} as |functionaris|>
+            <functionaris.get @prop="bekleedt" as |attributes value bekleedt|>
               <div {{rdfa attributes}}>
-                {{#bekleedt.get prop="rol" as |attributes value rol|}}
+                <bekleedt.get @prop="rol" as |attributes value rol|>
                   <div {{rdfa attributes}}>
-                    {{#rol.get prop="label" as |attributes value|}}
+                    <rol.get @prop="label" as |attributes value|>
                       <span {{rdfa attributes}}>{{value}}</span>
-                    {{/rol.get}}
+                    </rol.get>
                   </div>
-                {{/bekleedt.get}}
+                </bekleedt.get>
               </div>
-            {{/functionaris.get}}
-          {{/with-rdfa-context}}
+            </functionaris.get>
+          </WithRdfaContext>
 
         </td>
 
-        {{#with-rdfa-context tagName="td" model=row as |functionaris|}}
-          {{#functionaris.get prop="isBestuurlijkeAliasVan" as |attributes value persoon|}}
+        <WithRdfaContext @tagName="td" @model={{row}} as |functionaris|>
+          <functionaris.get @prop="isBestuurlijkeAliasVan" as |attributes value persoon|>
             <div {{rdfa attributes}}>
-              {{#persoon.get prop="gebruikteVoornaam" as |attributes value|}}
+              <persoon.get @prop="gebruikteVoornaam" as |attributes value|>
                 <span {{rdfa attributes}}>{{value}}</span>
-              {{/persoon.get}}
+              </persoon.get>
             </div>
-          {{/functionaris.get}}
-        {{/with-rdfa-context}}
+          </functionaris.get>
+        </WithRdfaContext>
 
-        {{#with-rdfa-context tagName="td" model=row as |functionaris|}}
-          {{#functionaris.get prop="isBestuurlijkeAliasVan" as |attributes value persoon|}}
+        <WithRdfaContext @tagName="td" @model={{row}} as |functionaris|>
+          <functionaris.get @prop="isBestuurlijkeAliasVan" as |attributes value persoon|>
             <div {{rdfa attributes}}>
-              {{#persoon.get prop="achternaam" as |attributes value|}}
+              <persoon.get @prop="achternaam" as |attributes value|>
                 <span {{rdfa attributes}}>{{value}}</span>
-              {{/persoon.get}}
+              </persoon.get>
             </div>
-          {{/functionaris.get}}
-        {{/with-rdfa-context}}
+          </functionaris.get>
+        </WithRdfaContext>
 
-        {{#with-rdfa-context tagName="td" model=row as |functionaris|}}
-          {{#functionaris.get prop="status" as |attributes value status|}}
+        <WithRdfaContext @tagName="td" @model={{row}} as |functionaris|>
+          <functionaris.get @prop="status" as |attributes value status|>
             <div {{rdfa attributes}}>
-              {{#status.get prop="label" as |attributes value|}}
+              <status.get @prop="label" as |attributes value|>
                 <span {{rdfa attributes}}>{{value}}</span>
-              {{/status.get}}
+              </status.get>
             </div>
-          {{/functionaris.get}}
-        {{/with-rdfa-context}}
+          </functionaris.get>
+        </WithRdfaContext>
 
-        {{#with-rdfa-context
-          tagName="td"
-          class="u-hidden-mobile word-break--break-word"
-          model=row as |functionaris|}}
-          {{#functionaris.get prop="bekleedt" as |attributes value bekleedt|}}
+        <WithRdfaContext @tagName="td" @class="u-hidden-mobile word-break--break-word" @model={{row}} as |functionaris|>
+          <functionaris.get @prop="bekleedt" as |attributes value bekleedt|>
             <div {{rdfa attributes}}>
-              {{#bekleedt.get prop="contactinfo" as |attributes value contactinfo|}}
+              <bekleedt.get @prop="contactinfo" as |attributes value contactinfo|>
                 <div {{rdfa attributes}}>
-                  {{#contactinfo.get prop="email" as |attributes email|}}
+                  <contactinfo.get @prop="email" as |attributes email|>
                     email:
                     {{#if email}}
                       <span {{rdfa attributes}}>{{email}}</span>
                     {{else}}
                       <span class="text-fade">Onbepaald</span>
                     {{/if}}
-                  {{/contactinfo.get}}
+                  </contactinfo.get>
                 </div>
                 <div {{rdfa attributes}}>
-                  {{#contactinfo.get prop="telefoon" as |attributes telefoon|}}
+                  <contactinfo.get @prop="telefoon" as |attributes telefoon|>
                     telefoon:
                     {{#if telefoon}}
                       <span {{rdfa attributes}}>{{telefoon}}</span>
                     {{else}}
                       <span class="text-fade">Onbepaald</span>
                     {{/if}}
-                  {{/contactinfo.get}}
+                  </contactinfo.get>
                 </div>
-              {{/bekleedt.get}}
+              </bekleedt.get>
             </div>
-          {{/functionaris.get}}
-        {{/with-rdfa-context}}
+          </functionaris.get>
+        </WithRdfaContext>
 
-        {{#with-rdfa-context
-          tagName="td"
-          class="u-hidden-mobile word-break--break-word"
-          model=row as |functionaris|}}
-          {{#functionaris.get prop="bekleedt" as |attributes value bekleedt|}}
+        <WithRdfaContext @tagName="td" @class="u-hidden-mobile word-break--break-word" @ model={{row}} as |functionaris|>
+          <functionaris.get @prop="bekleedt" as |attributes value bekleedt|>
             <div {{rdfa attributes}}>
-              {{#bekleedt.get prop="contactinfo" as |attributes value contactinfo|}}
+              <bekleedt.get @prop="contactinfo" as |attributes value contactinfo|>
                 <div {{rdfa attributes}}>
-                  {{#contactinfo.get prop="adres" as |attributes value adres|}}
+                  <contactinfo.get @prop="adres" as |attributes value adres|>
                     <div {{rdfa attributes}}>
                       {{#if adres}}
-                        {{#adres.get prop="volledigAdres" as |attributes volledigAdres|}}
+                        <adres.get @prop="volledigAdres" as |attributes volledigAdres|>
                           <span {{rdfa attributes}}>{{volledigAdres}}</span>
-                        {{/adres.get}}
+                        </adres.get>
                       {{else}}
                         <span class="text-fade">Onbepaald</span>
                       {{/if}}
                     </div>
-                  {{/contactinfo.get}}
+                  </contactinfo.get>
                 </div>
-              {{/bekleedt.get}}
+              </bekleedt.get>
             </div>
-          {{/functionaris.get}}
-        {{/with-rdfa-context}}
-      {{/c.body}}
+          </functionaris.get>
+        </WithRdfaContext>
+      </c.body>
     {{/if}}
 
-  {{/t.content}}
-{{/data-table}}
+  </t.content>
+</DataTable>
