--- a/app/templates/components/download-miniatures.hbs
+++ b/app/templates/components/download-miniatures.hbs
@@ -2,7 +2,7 @@
   <div class="col--4-12 col--12-12--s">
     <WuDocumentMiniature @class="u-spacer--bottom" @type="CSV"
       @label="CSV: voor spreadsheet editors zoals Excel of Numbers."
-      @metadata={{csvMetadata}} @onClick={{action "download" csvFile}} />
+      @metadata={{this.csvMetadata}} @onClick={{fn this.download csvFile}} />
   </div>
 {{else}}
   <div class="col--4-12 col--12-12--s">
@@ -15,7 +15,7 @@
   <div class="col--4-12 col--12-12--s">
     <WuDocumentMiniature @class="u-spacer--bottom" @type="Turtle"
       @label="Turtle: gestructureerde data voor dataverwerking en analyse."
-      @metadata={{ttlMetadata}} @onClick={{action "download" ttlFile}} />
+      @metadata={{this.ttlMetadata}} @onClick={{fn this.download ttlFile}} />
   </div>
 {{else}}
   <div class="col--4-12 col--12-12--s">
