--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,7 +9,7 @@
       <div class="col--6-12">
         <h3 class="h5 u-spacer--tiny">Kies een bestuurseenheid</h3>
         <p class="small u-spacer--tiny">Zoals een gemeentebestuur, autonoom gemeentebedrijf, OCMW-vereniging, intergemeentelijk samenwerkingsverband (IGS), provinciebestuur of autonoom provinciebedrijf (APB)</p>
-        <SelectBestuurseenheid @value={{bestuurseenheidId}} @onSelectionChange={{action "setBestuurseenheidId"}} @class="u-spacer--tiny ember-power-select--large" />
+        <SelectBestuurseenheid @value={{bestuurseenheidId}} @onSelectionChange={{this.setBestuurseenheidId}} @class="u-spacer--tiny ember-power-select--large" />
       </div>
     </div>
     <LinkTo @route="bestuurseenheid.functionarissen" @model={{bestuurseenheidId}} @class="button button--narrow button--large" @classBinding="bestuurseenheidId::button--disabled">
