remade SelectBestuurseenheid to imitate the one in frontend-toezicht-abb

--- a/app/templates/components/select-bestuurseenheid.hbs
+++ b/app/templates/components/select-bestuurseenheid.hbs
@@ -1,14 +1,16 @@
-<PowerSelect
-  @searchEnabled={{true}}
-  @placeholder="Berchem, Hasselt, Gent, ..."
-  @search={{perform search}}
-  @searchPlaceholder="Typ om te zoeken..."
-  @options={{options}}
-  @selected={{selected}}
-  @onChange={{action "changeSelected"}}
-  @allowClear={{true}}
-  as |bestuurseenheid|
->
+<div {{did-update this.updateSelectedValue @value}}>
+  <PowerSelect
+    @searchEnabled={{true}}
+    @placeholder="Berchem, Hasselt, Gent, ..."
+    @search={{perform search}}
+    @searchPlaceholder="Typ om te zoeken..."
+    @options={{options}}
+    @selected={{selected}}
+    @onChange={{action "changeSelected"}}
+    @allowClear={{true}}
+    as |bestuurseenheid|
+  >
 
-  {{bestuurseenheid.naam}} ({{bestuurseenheid.classificatie.label}})
-</PowerSelect>
+    {{bestuurseenheid.naam}} ({{bestuurseenheid.classificatie.label}})
+  </PowerSelect>
+</div>
