Feature/conversion to octane (#5)
* upgraded to ember 3.18

* converted simple components to class syntax

* Converted index route to octane syntax

* converted the rest of the route templates to octane

* converted header and footer to octane

* converted download miniatures to octane

* converted big table

* fixed address table

* Finished converting the templates

* converted the controllers

* fixed error with fastboot service

* converted routes to octane

* stated converting models to octane

* converted the rest of the models used

* fixed some things and started converting the components

* converted the rest of the components

* deleted unused models and converted ones that were left

* removed unused property and added explanatory comment

* completely missed this template

* removed unused models

* replaced rdfa bindings attribute by a getter

* removed action and scoped attributes in components

Co-authored-by: Oscar Rodriguez <oscar@verify.as>

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,14 +1,14 @@
 {{#unless isFastBoot}}
-  {{head-layout}}
+  <HeadLayout />
 {{/unless}}
 <div class="container">
   {{title "Leidinggevenden databank"}}
 
-  {{#unless isFastBoot}} {{wu-widget src=header class="vo-header-widget"}} {{/unless}}
+  {{#unless isFastBoot}} <WuWidget @src={{header}} @class="vo-header-widget" /> {{/unless}}
 
-  {{#with-rdfa-prefixes-and-vocab}}
+  <WithRdfaPrefixesAndVocab>
     {{outlet}}
-  {{/with-rdfa-prefixes-and-vocab}}
+  </WithRdfaPrefixesAndVocab>
 
-  {{#unless isFastBoot}} {{wu-widget src=footer}} {{/unless}}
+  {{#unless isFastBoot}} <WuWidget @src={{footer}}/> {{/unless}}
 </div>
