--- a/app/templates/components/download-miniatures.hbs
+++ b/app/templates/components/download-miniatures.hbs
@@ -1,27 +1,27 @@
 {{#if csvFile}}
   <div class="col--4-12 col--12-12--s">
-    {{wu-document-miniature class="u-spacer--bottom" type="CSV"
-      label="CSV: voor spreadsheet editors zoals Excel of Numbers."
-      metadata=csvMetadata onClick=(action "download" csvFile)}}
+    <WuDocumentMiniature @class="u-spacer--bottom" @type="CSV"
+      @label="CSV: voor spreadsheet editors zoals Excel of Numbers."
+      @metadata={{this.csvMetadata}} @onClick={{fn this.download csvFile}} />
   </div>
 {{else}}
   <div class="col--4-12 col--12-12--s">
-    {{wu-document-miniature class="u-spacer--bottom" type="CSV"
-      label="CSV: voor spreadsheet editors zoals Excel of Numbers."
-      metadata="Niet beschikbaar"}}
+    <WuDocumentMiniature @class="u-spacer--bottom" @type="CSV"
+      @label="CSV: voor spreadsheet editors zoals Excel of Numbers."
+      @metadata="Niet beschikbaar" />
   </div>
 {{/if}}
 {{#if ttlFile}}
   <div class="col--4-12 col--12-12--s">
-    {{wu-document-miniature class="u-spacer--bottom" type="Turtle"
-      label="Turtle: gestructureerde data voor dataverwerking en analyse."
-      metadata=ttlMetadata onClick=(action "download" ttlFile)}}
+    <WuDocumentMiniature @class="u-spacer--bottom" @type="Turtle"
+      @label="Turtle: gestructureerde data voor dataverwerking en analyse."
+      @metadata={{this.ttlMetadata}} @onClick={{fn this.download ttlFile}} />
   </div>
 {{else}}
   <div class="col--4-12 col--12-12--s">
-    {{wu-document-miniature class="u-spacer--bottom" type="Turtle"
-      label="Turtle: gestructureerde data voor dataverwerking en analyse."
-      metadata="Niet beschikbaar"}}
+    <WuDocumentMiniature @class="u-spacer--bottom" @type="Turtle"
+      @label="Turtle: gestructureerde data voor dataverwerking en analyse."
+      @metadata="Niet beschikbaar" />
   </div>
 {{/if}}
 <p>Mail naar <a href="mailto:LoketLokaalBestuur@vlaanderen.be">LoketLokaalBestuur@vlaanderen.be</a> voor meer informatie.</p>
