--- a/app/templates/components/number-pagination.hbs
+++ b/app/templates/components/number-pagination.hbs
@@ -1,23 +1,23 @@
 <div class="pager">
   <ul class="pager__list">
     <li class="pager__element u-hidden-mobile">
-      <span class="u-visually-hidden">Rij </span><strong>{{startItem}} - {{endItem}}</strong> van {{nbOfItems}}
+      <span class="u-visually-hidden">Rij </span><strong>{{this.startItem}} - {{this.endItem}}</strong> van {{@nbOfItems}}
     </li>
     {{#if hasMultiplePages}}
       {{#unless isFirstPage}}
         <li class="pager__element">
-          <a {{action "changePage" links.prev}} role="button">
-            {{wu-icon "vi-arrow" class="vi-u-180deg vi-u-s"}} vorige
-            <span class="u-visually-hidden"> {{pageSize}} rijen</span>
+          <a {{fn this.changePage links.prev}} role="button">
+            <WuIcon @icon="vi-arrow" @class="vi-u-180deg vi-u-s" /> vorige
+            <span class="u-visually-hidden"> {{@pageSize}} rijen</span>
           </a>
         </li>
       {{/unless}}
       {{#unless isLastPage}}
         <li class="pager__element">
-          <a {{action "changePage" links.next}} role="button">
+          <a {{fn this.changePage links.next}} role="button">
             volgende
-            <span class="u-visually-hidden"> {{pageSize}} rijen</span>
-            {{wu-icon "vi-arrow" class="vi-u-s"}}
+            <span class="u-visually-hidden"> {{@pageSize}} rijen</span>
+            <WuIcon @icon="vi-arrow" @class="vi-u-s" />
           </a>
         </li>
       {{/unless}}
