--- a/app/templates/components/select-bestuurseenheid.hbs
+++ b/app/templates/components/select-bestuurseenheid.hbs
@@ -1,15 +1,14 @@
-<div {{did-update this.updateSelectedValue @value}}>
-  <PowerSelect
-    @searchEnabled={{true}}
-    @placeholder="Berchem, Hasselt, Gent, ..."
-    @search={{perform search}}
-    @searchPlaceholder="Typ om te zoeken..."
-    @options={{options}}
-    @selected={{selected}}
-    @onChange={{action "changeSelected"}}
-    @allowClear={{true}}
-    as |bestuurseenheid|
-  >
+<PowerSelect
+  @searchEnabled={{true}}
+  @placeholder="Berchem, Hasselt, Gent, ..."
+  @search={{perform search}}
+  @searchPlaceholder="Typ om te zoeken..."
+  @options={{this.options}}
+  @selected={{this.selected}}
+  @onChange={{action "changeSelected"}}
+  @allowClear={{true}}
+  as |bestuurseenheid|
+>
 
     {{bestuurseenheid.naam}} ({{bestuurseenheid.classificatie.label}})
   </PowerSelect>
