--- a/app/templates/components/select-bestuurseenheid.hbs
+++ b/app/templates/components/select-bestuurseenheid.hbs
@@ -1,13 +1,15 @@
-<PowerSelect
-  @searchEnabled={{true}}
-  @placeholder="Berchem, Hasselt, Gent, ..."
-  @search={{perform search}}
-  @searchPlaceholder="Typ om te zoeken..."
-  @options={{this.options}}
-  @selected={{this.selected}}
-  @onChange={{action "changeSelected"}}
-  @allowClear={{true}}
-  as |bestuurseenheid|
->
-  {{bestuurseenheid.naam}} ({{bestuurseenheid.classificatie.label}})
-</PowerSelect>
+<div class={{this.args.class}}>
+  <PowerSelect
+    @searchEnabled={{true}}
+    @placeholder="Berchem, Hasselt, Gent, ..."
+    @search={{perform search}}
+    @searchPlaceholder="Typ om te zoeken..."
+    @options={{this.options}}
+    @selected={{this.selected}}
+    @onChange={{action "changeSelected"}}
+    @allowClear={{true}}
+    as |bestuurseenheid|
+  >
+    {{bestuurseenheid.naam}} ({{bestuurseenheid.classificatie.label}})
+  </PowerSelect>
+</div>
