fixed errors related to the ember-power-select

--- a/app/templates/components/select-bestuurseenheid.hbs
+++ b/app/templates/components/select-bestuurseenheid.hbs
@@ -3,10 +3,13 @@
     @searchEnabled={{true}}
     @placeholder="Berchem, Hasselt, Gent, ..."
     @search={{perform search}}
+    @searchField="naam"
     @searchPlaceholder="Typ om te zoeken..."
     @options={{this.options}}
     @selected={{this.selected}}
     @onChange={{action "changeSelected"}}
+    @noMatchesMessage="Geen resultaten"
+    @searchPlaceholder="Typ om te zoeken"
     @allowClear={{true}}
     as |bestuurseenheid|
   >
