Start changing layout to appuniversum

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
-<WuContentHeader @title="Leidinggevendendatabank">
-  <img sizes="50vw" src="/assets/images/banner-leidinggevenden.jpg" srcset="/assets/images/banner-leidinggevenden-320.jpg 320w, /assets/images/banner-leidinggevenden-1024.jpg 1024w, /assets/images/banner-leidinggevenden-1600.jpg 1600w" alt="" title="">
-</WuContentHeader>
+<AuContentHeader @titlePartOne="Vlaanderen" @titlePartTwo="Leidinggevendendatabank" @pictureSize="large">
+  <img sizes="50vw" src="/assets/images/loket-header-1600-85a5251e74ef6ac8491b2f228d2c90da.jpg" srcset="/assets/images/banner-leidinggevenden-320.jpg 320w, /assets/images/banner-leidinggevenden-1024.jpg 1024w, /assets/images/banner-leidinggevenden-1600.jpg 1600w" alt="Foto van een stad met een kanaal en huizen.">
+</AuContentHeader>
 <div class="region">
   <div class="layout layout--wide u-spacer--bottom--large" id="main">
 
