--- a/app/templates/legaal.hbs
+++ b/app/templates/legaal.hbs
@@ -1,5 +1,5 @@
-<div class="region">
-  <div class="layout layout--wide">
+<div class="au-o-region">
+  <div class="au-o-layout au-o-layout--large">
     {{outlet}}
   </div>
 </div>
