--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,14 +1,35 @@
 {{#unless isFastBoot}}
   <HeadLayout />
 {{/unless}}
-<div class="container">
-  {{title "Leidinggevenden databank"}}
+{{page-title "Leidinggevenden databank"}}
+<AuMainHeader @brandLink="https://leidinggevenden.lokaalbestuur.vlaanderen.be/" @homeRoute="index" @appTitle="Leidinggevendendatabank" @contactRoute="contact">
+</AuMainHeader>
 
-  {{#unless isFastBoot}} <WuWidget @src={{header}} @class="vo-header-widget" /> {{/unless}}
+<div class="au-c-main-container" itemprop="mainContentOfPage" id="main">
+  <div class="au-c-main-container__content au-c-main-container__content--scroll">
 
-  <WithRdfaPrefixesAndVocab>
-    {{outlet}}
-  </WithRdfaPrefixesAndVocab>
+    <WithRdfaPrefixesAndVocab>
+      {{outlet}}
+    </WithRdfaPrefixesAndVocab>
 
-  {{#unless isFastBoot}} <WuWidget @src={{footer}}/> {{/unless}}
+    <AuMainFooter>
+      <AuHeading @level="3" @skin="4">
+        leidinggevenden.lokaalbestuur.vlaanderen.be is een officiële website van de Vlaamse overheid
+      </AuHeading>
+      <AuContent @skin="small">
+        <p>Uitgegeven door <a class="au-c-link" href="https://www.vlaanderen.be/organisaties/administratieve-diensten-van-de-vlaamse-overheid/beleidsdomein-kanselarij-en-bestuur/agentschap-binnenlands-bestuur">Agentschap Binnenlands Bestuur</a></p>
+        <ul class="au-c-list-horizontal">
+          <li class="au-c-list-horizontal__item">
+            <AuLink @linkRoute="legaal.disclaimer" @skin="secondary">Disclaimer</AuLink>
+          </li>
+          <li class="au-c-list-horizontal__item">
+            <AuLink @linkRoute="legaal.cookieverklaring" @skin="secondary">Cookieverklaring</AuLink>
+          </li>
+          <li class="au-c-list-horizontal__item">
+            <AuLink @linkRoute="legaal.toegankelijkheidsverklaring" @skin="secondary">Toegankelijkheid</AuLink>
+          </li>
+        </ul>
+      </AuContent>
+    </AuMainFooter>
+  </div>
 </div>
