--- a/app/templates/legaal/toegankelijkheidsverklaring.hbs
+++ b/app/templates/legaal/toegankelijkheidsverklaring.hbs
@@ -3,17 +3,13 @@
   <p>
     Agentschap Binnenlands Bestuur streeft ernaar zijn websites en mobiele applicaties toegankelijk te maken, overeenkomstig het Bestuursdecreet.
   </p>
-  <p>Deze toegankelijkheidsverklaring is van toepassing op <a href="https://mandaten.lokaalbestuur.vlaanderen.be">mandaten.lokaalbestuur.vlaanderen.be</a></p>
+  <p>Deze toegankelijkheidsverklaring is van toepassing op <a href="https://leidinggevenden.lokaalbestuur.vlaanderen.be">leidinggevenden.lokaalbestuur.vlaanderen.be</a></p>
   <h2>Nalevingsstatus</h2>
   <p>Deze web applicatie voldoet gedeeltelijk aan de <a href="https://www.w3.org/Translations/WCAG21-nl/" target="_blank" rel="noopener noreferrer">Richtlijnen voor Toegankelijkheid van Webcontent (WCAG) 2.1 Niveau AA</a>, omdat niet aan de onderstaande eis(en) is voldaan.</p>
   <h2>Niet-toegankelijke inhoud</h2>
   <ul>
     <li>
-      <strong>Datepicker:</strong> de volledige datepicker functionaliteit is niet toegankelijk via het toetstenbord (<a href="https://www.w3.org/Translations/WCAG21-nl/#toetsenbord-geen-uitzondering" target="_blank" rel="noopener noreferrer">Succescriterium 2.1.3 Toetsenbord</a>). <br>
-      <em>Alternatief:</em> de datum kan manueel ingevoerd worden in het datum veld.
-    </li>
-    <li>
-      <strong>Multiple select/Search select:</strong> slechts een deel van select functionaliteit is toegankelijk via het toetstenbord (<a href="https://www.w3.org/Translations/WCAG21-nl/#toetsenbord-geen-uitzondering" target="_blank" rel="noopener noreferrer">Succescriterium 2.1.3 Toetsenbord</a>). <br>
+      <strong>Multiple select/Search select:</strong> slechts een deel van select functionaliteit is toegankelijk via het toetsenbord (<a href="https://www.w3.org/Translations/WCAG21-nl/#toetsenbord-geen-uitzondering" target="_blank" rel="noopener noreferrer">Succescriterium 2.1.3 Toetsenbord</a>). <br>
       <em>Alternatief:</em> de waarden kunnen manueel ingevoerd worden in het select input veld.
     </li>
   </ul>
